# open-crypto-checkout

.sqlx/: query-0c18126b129b702db48f541bc9cf90e8707688c3b3d97618375ca1fc24320ae9.json  query-17c49666381bcc96bebe66228c067b06f12629bedd12c48fe1288a6d1188507f.json  query-1bcff06871b24ba70bc162257508e8de670e2f9670b597b8799529d0e2afb0e5.json  query-22dacd7eb8dcf481274634490e2c448c4056a5703caebaefce839ab3985bd072.json  query-856bd149efde0a9ac7406065e61e3f7aeba7d794ce832c63fae41a0afc8cc911.json  query-bd56693404474f68a7049e1c4eaa40902b635a57ab96071624391dc7dedad232.json  query-e830fbeeb63ce0da070e2d05b0b361121017760e0c41051788d68e7fd76c95d9.json  query-f0f92b8acf8df1c0e0bb3250f6b8354aad128066dc35fae2f322c061c26a3c3b.json  query-f4b38316e9823dc7d1b4f8c3e26cefdd4385550ab3a133289b8c6b967bd06606.json  query-fecf08aba65bea44b0e64b61536d2ff7f53c487fc56512dd73646e44c9909610.json
doc/: package.json
doc/src/content/docs/guides/: configuration.mdoc  deploy-systemd.mdoc  frontend.mdoc  webhooks.mdoc
doc/src/content/docs/reference/: admin-api.mdoc  authentication.mdoc  user-api.mdoc
ocrch-core/src/entities/: erc20_pending_deposit.rs  erc20_transfer.rs  order_records.rs  trc20_pending_deposit.rs  trc20_transfer.rs
ocrch-core/src/processors/: webhook_sender.rs
ocrch-sdk/: Cargo.toml
ocrch-sdk/src/client/: admin.rs  service.rs  user.rs  webhook.rs
ocrch-server/src/: main.rs  server.rs  state.rs
