[package]
name = "ocrch-sdk"
version = "0.1.1"
edition = "2024"
license = "Apache-2.0"
description = "The SDK for Open Crypto Checkout, a headless cryptocurrency checkout server."
keywords = ["blockchain", "sdk"]
repository = "https://github.com/suitsu31-club/open-crypto-checkout"
homepage = "https://ocrch.suitsu31.club/"

[features]
client = ["dep:reqwest", "dep:tokio-tungstenite", "dep:futures-util"]

[package.metadata.docs.rs]
all-features = true

[dependencies]
tokio = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
urlencoding = { workspace = true }
fast32 = { workspace = true }
bytes = { workspace = true }
uuid = { workspace = true }
rust_decimal = { workspace = true }
compact_str = { workspace = true }
time = { workspace = true }
url = { workspace = true }
ring = { workspace = true }
reqwest = { workspace = true, optional = true }
tokio-tungstenite = { workspace = true, optional = true }
futures-util = { workspace = true, optional = true }

# Security
argon2 = "0.5"
rand = { workspace = true }